--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ h1{
 }
 .app{
   width: 100%;
-  height: 100vh;
+  height: 140vh;
   position: relative;
   background-color: rgba(0,0,0,0.4);
   color: #fff;
@@ -101,4 +101,41 @@ h1{
 }
 .middle p{
   font-size: 18px;
+}
+.center{
+  align-items: center;
+  margin-left: 540px;
+  margin-top: 200px;
+}
+.lati input{
+  padding: .7rem 1.5rem;
+  font-size: 1.2rem;
+  border-radius: 25px;
+  border: 1px solid rgba(255,255,255,0.8);  
+  background: rgba(255,255,255,0.1) ;
+  color: #fff;
+}
+.app .long{
+  text-align: center;
+  padding: 1rem;
+}
+/* .lati input{
+  display: flex;
+} */
+.box{
+  /* display: flex; */
+  justify-content: space-evenly;
+  text-align: center;
+  width: 100%;
+  margin: 1rem auto;
+  padding: 1rem;
+  border-radius: 4px;
+  background-color: rgba(255,255,255,0.2);
+  line-height: 2;
+}
+.cel{
+  margin-right: 20px;
+}
+.kelvin{
+  margin-left: 30px;
 }
