--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Arima:wght@500&family=Lora:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arima:wght@500&family=Lora:ital@1&family=Trispace&display=swap');
 *{
   box-sizing: border-box;
   margin: 0;
@@ -138,4 +139,22 @@ h1{
 }
 .kelvin{
   margin-left: 30px;
+}
+.citycolor{
+  color: blue;
+  /* font-family: 'Lora', serif; */
+  font-family: 'Trispace', sans-serif;
+}
+.temp{
+  color: red;
+}
+
+
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
+
+.lati {
+  display: flex;
+  margin-left: 317px;
 }
