--- a/src/index.css
+++ b/src/index.css
@@ -158,3 +158,33 @@ h1{
   display: flex;
   margin-left: 317px;
 }
+
+.button .button-1{
+  background-color: lightcoral;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border: none;
+  border-radius: 16px;
+}
+
+.apps{
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  background-color: rgba(0,0,0,0.4);
+  color: #fff;
+  background: url('./assets/dark.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  padding-left: 35%;
+  padding-top: 20%;
+}
